Landing Page Corrections

--- a/index.html
+++ b/index.html
@@ -458,17 +458,17 @@
                                 <text x="527" y="267" class="fil0 fnt0">ACTUALIZE</text>
                             </g>
                         </g>
-                    </svg>                        
+                        </svg>                        
                     </div>
                     <div class="row row-cols-1 col align-items-start">
-                    <div class="col h-small my-0 py-0 tagline text-center">
+                    <div class="col h-small my-0 py-0 tagline text-black text-center">
                         Together, We Make
                     </div>                    
-                    <div class="col h-big my-0 py-0 tagline text-center" id="textFills">
+                    <div class="col h-big my-0 py-0 tagline text-black text-center" id="textFills">
                         <div class="textRotate d-inline" style="opacity: 0;">I</div>
                         <div class="textRotate d-inline" style="opacity: 0;">T</div>
                     </div>
-                    <div class="col h-small my-0 py-0 tagline text-center">
+                    <div class="col h-small my-0 py-0 tagline text-black text-center">
                         Happen
                     </div>
                 </div>
