Landing Page Corrections

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </head>
     <body>
         <div class="container-fluid bg-light" id="containerBlock">
-            <div class="row fullpage justify-content-start landing">
+            <div class="row fullpage justify-content-start landing border-bottom shadow-sm">
                 <div class="row col-12 topmenu mx-0 sticky-top">
                     <div class="col" id="menubar">
-                        <nav class="navbar navheight navbar-expand-md navbar-light px-0 bg-light sticky-top my-2">
+                        <nav class="navbar navheight navbar-expand-md navbar-light p-0 bg-light sticky-top mt-2">
                             <a href="#" class="navabar-brand">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
@@ -235,29 +235,17 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav mx-auto">
                                     <li class="nav-item mx-2 py-2">
-                                        <a class="nav-link" href="#">
-                                            <button type="menu" class="btn btn-outline-danger">
-                                                Information Technology
-                                            </button>
-                                        </a>
+                                        <a class="nav-link text-danger" href="#">Information Technology</a>
                                     </li>
                                     <li class="nav-item mx-2 py-2">
-                                        <a class="nav-link" href="#">
-                                            <button type="menu" class="btn btn-outline-success">
-                                                Industrial Automation
-                                            </button>
-                                        </a>
+                                        <a class="nav-link text-success" href="#">Industrial Automation</a>
                                     </li>
                                     <li class="nav-item mx-2 py-2">
-                                        <a class="nav-link" href="#">
-                                            <button type="menu" class="btn btn-outline-primary">
-                                                Operational Technology
-                                            </button>
-                                        </a>
+                                        <a class="nav-link text-primary" href="#">Operational Technology</a>
                                     </li>
                                 </ul>
                             </div>
-                            <button type="button" class="btn btn-outline-dark py-2">Contact Us</button>
+                            <div class="nav-item py-2">Contact Us</div>
                         </nav>
                         </div>
                     </div>
@@ -267,7 +255,7 @@
                         <svg
                         xmlns="http://www.w3.org/2000/svg"
                         xml:space="preserve"
-                        width="auto"
+                        width="100%"
                         height="100%"
                         version="1.1"
                         style="
@@ -461,17 +449,17 @@
                         </svg>                        
                     </div>
                     <div class="row row-cols-1 col align-items-start">
-                    <div class="col h-small my-0 py-0 tagline text-black text-center">
-                        Together, We Make
-                    </div>                    
-                    <div class="col h-big my-0 py-0 tagline text-black text-center" id="textFills">
-                        <div class="textRotate d-inline" style="opacity: 0;">I</div>
-                        <div class="textRotate d-inline" style="opacity: 0;">T</div>
+                        <div class="col h-small my-0 py-0 tagline text-black text-center d-inline">
+                            Together, We Make
+                        </div>                    
+                        <div class="col h-big my-0 py-0 tagline text-black text-center d-inline" id="textFills">
+                            <div class="textRotate d-inline" style="opacity: 0;">I</div>
+                            <div class="textRotate d-inline" style="opacity: 0;">T</div>
+                        </div>
+                        <div class="col h-small my-0 py-0 tagline text-black text-center d-inline">
+                            Happen
+                        </div>
                     </div>
-                    <div class="col h-small my-0 py-0 tagline text-black text-center">
-                        Happen
-                    </div>
-                </div>
                 </div>
             </div>
         </div>
