Landing Page OT Suggestions

--- a/index.html
+++ b/index.html
@@ -181,7 +181,17 @@
                                             fill: #EC6A08
                                         }
 
-                                        .fil8 {
+                                        <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                              Dropdown
+                                            </a>
+                                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                              <a class="dropdown-item" href="#">Action</a>
+                                              <a class="dropdown-item" href="#">Another action</a>
+                                              <div class="dropdown-divider"></div>
+                                              <a class="dropdown-item" href="#">Something else here</a>
+                                            </div>
+                                          </li>   .fil8 {
                                             fill: #000000
                                         }
 
@@ -229,9 +239,16 @@
                                 <li class="nav-item mx-2">
                                     <a class="nav-link text-dark font-weight-bold h-smaller" href="#">About Us</a>
                                 </li>
-                                <li class="nav-item mx-2">
-                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#">Services</a>
-                                </li>
+                                <li class="nav-item dropdown text-dark font-weight-bold h-smaller">
+                                    <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                      Services
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                      <a class="dropdown-item" href="#">Information Technology</a>
+                                      <a class="dropdown-item" href="#">Industrial Automation</a>                                      
+                                      <a class="dropdown-item" href="#">Operational Technology</a>
+                                    </div>
+                                  </li>
                                 <li class="nav-item mx-2">
                                     <a class="nav-link text-dark font-weight-bold h-smaller" href="#">Projects</a>
                                 </li>
