--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-    <div class="container-fluid bg-light" id="containerBlock">
-        <div class="row fullpage justify-content-start landing border-bottom shadow-sm">
-            <div class="row col-12 topmenu px-0 px-md-2 mx-0 sticky-top align-items-center">
+    <div class="container-fluid bg-light position-relative mx-0 px-0" id="containerBlock">
+        <div class="row justify-content-start landing border-bottom shadow-sm mx-0">
+            <div class="row col-12 topmenu px-0 mx-0 align-items-center">
                 <div class="col mx-0 px-0 px-md-2" id="menubar">
                     <nav class="navbar navheight navbar-expand-md navbar-light p-0 bg-light sticky-top my-auto">
-                        <a href="#" class="navabar-brand" id="logo1">
+                        <a href="/" class="navabar-brand" id="logo1">
                             <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="58.1207mm"
                                 height="14.5445mm" version="1.1"
                                 style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
@@ -181,17 +181,7 @@
                                             fill: #EC6A08
                                         }
 
-                                        <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                              Dropdown
-                                            </a>
-                                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                              <a class="dropdown-item" href="#">Action</a>
-                                              <a class="dropdown-item" href="#">Another action</a>
-                                              <div class="dropdown-divider"></div>
-                                              <a class="dropdown-item" href="#">Something else here</a>
-                                            </div>
-                                          </li>   .fil8 {
+                                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"href="#"id="navbarDropdown"role="button"data-toggle="dropdown"aria-haspopup="true"aria-expanded="false">Dropdown </a><div class="dropdown-menu"aria-labelledby="navbarDropdown"><a class="dropdown-item"href="#">Action</a><a class="dropdown-item"href="#">Another action</a><div class="dropdown-divider"></div><a class="dropdown-item"href="#">Something else here</a></div></li>.fil8 {
                                             fill: #000000
                                         }
 
@@ -237,29 +227,27 @@
                         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item mx-2">
-                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#">About Us</a>
-                                </li>
-                                <li class="nav-item dropdown text-dark font-weight-bold h-smaller">
-                                    <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                      Services
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                      <a class="dropdown-item" href="#">Information Technology</a>
-                                      <a class="dropdown-item" href="#">Industrial Automation</a>                                      
-                                      <a class="dropdown-item" href="#">Operational Technology</a>
-                                    </div>
-                                  </li>
-                                <li class="nav-item mx-2">
-                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#">Projects</a>
+                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#"
+                                        id="menu-aboutUs">About Us</a>
                                 </li>
                                 <li class="nav-item mx-2">
-                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#">Training</a>
+                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#"
+                                        id="menu-architecture">Architecture</a>
                                 </li>
                                 <li class="nav-item mx-2">
-                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#">Blog</a>
+                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#"
+                                        id="menu-services">Services</a>
                                 </li>
                                 <li class="nav-item mx-2">
-                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#">Contact Us</a>
+                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#"
+                                        id="menu-projects">Projects</a>
+                                </li>
+                                <li class="nav-item mx-2">
+                                    <a class="nav-link text-dark font-weight-bold h-smaller" href="#"
+                                        id="menu-training">Training</a>
+                                </li>
+                                <li class="nav-item mx-2">
+                                    <a class="nav-link text-dark font-weight-bold h-smaller">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
@@ -267,18 +255,68 @@
                 </div>
             </div>
         </div>
-        <div class="row col-12 text-black-50 contentpage mx-auto pr-2 justify-content-center align-items-center">
-            <div class="col-auto h-small text-left text-md-center px-1">
-                Together, We Make
+        <div class="row col-12 contentpage p-0 m-0 sectionpage align-items-center" id="landinPage">
+            <div class="row col-12 mx-0 px-0 justify-content-center contentpage position-absolute zindex-lowest bg-light id="
+                mainImages">
+                <img src="images/placeholder.jpg" alt="" class="float-left img-fluid main-images">
+                <img src="images/placeholder.jpg" alt="" class="float-left img-fluid main-images">
+                <img src="images/placeholder.jpg" alt="" class="float-left img-fluid main-images">
+                <img src="images/placeholder.jpg" alt="" class="float-left img-fluid main-images">
+                <img src="images/placeholder.jpg" alt="" class="float-left img-fluid main-images">
+                <img src="images/placeholder.jpg" alt="" class="float-left img-fluid main-images">
+                <img src="images/placeholder.jpg" alt="" class="float-left img-fluid main-images">
             </div>
-            <div class="col-auto h-small tagline text-left px-2" id="textFills">
-                <span id="words"></span>
-                <span id="blink">|</span>
-            </div>
-            <div class="col-auto h-small text-left text-md-center px-1">
-                Happen
+            <div
+                class="row col-12 text-black-50 mx-auto px-0 justify-content-center align-items-center position-absolute zindex-top">
+                <div class="col-auto h-small text-left text-md-center px-1">
+                    Together, We Make
+                </div>
+                <div class="col-auto h-small tagline text-left px-2" id="textFills">
+                    <span id="words"></span>
+                    <span id="blink">|</span>
+                </div>
+                <div class="col-auto h-small text-left text-md-center px-1">
+                    Happen
+                </div>
             </div>
         </div>
+        <div class="row col-12 contentpage p-0 m-0 d-none sectionpage" id="aboutUs"></div>
+        <div class="row col-12 contentpage p-0 m-0 d-none sectionpage" id="architecture"></div>
+        <div class="row col-12 contentpage p-0 m-0 d-none sectionpage" id="services">            
+            <div class="row px-0 mx-0 d-flex contentpage justify-content-between">
+                <div class="row row-cols-1 col-2 mx-0 px-0 pt-2">
+                    <div>
+                        <img src="images/placeholder.jpg" alt="" class="img-fluid col-10 mx-auto">
+                        <div>Operational Technology</div>
+                    </div>
+                    <div>
+                        <img src="images/placeholder.jpg" alt="" class="img-fluid col-10 mx-auto">
+                        <div>Industrial Automation</div>
+                    </div>
+                    <div>
+                        <img src="images/placeholder.jpg" alt="" class="img-fluid col-10 mx-auto">
+                        <div>Information Technology</div>
+                    </div>                    
+                </div>                
+                <div class="row contentpage col-8 px-0 mx-0 pt-2">
+                    <img src="images/placeholder.jpg" alt="" class="img-fluid col-8 mx-auto">
+                    <div class="col-8 mx-auto">Service 1 - Title</div>
+                    <div class="col-8 mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Fugit aspernatur quisquam dolorum eos rerum molestias minus consequatur ullam deleniti, ea
+                        aut obcaecati
+                        maiores repudiandae odio animi ipsa, in error facere?
+                    </div>
+                </div>
+                <div class="col-2 px-0 pt-2">
+                    <div class="text-center">                        
+                        <div>Service 1</div>
+                        <div>Service 2</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row col-12 contentpage p-0 m-0 d-none sectionpage" id="projects"></div>
+        <div class="row col-12 contentpage p-0 m-0 d-none sectionpage" id="training"></div>
     </div>
     </div>
     <!-- Anime JS -->
