--- a/index.html
+++ b/index.html
@@ -284,18 +284,18 @@
         <div class="row col-12 contentpage p-0 m-0 d-none sectionpage" id="architecture"></div>
         <div class="row col-12 contentpage p-0 m-0 d-none sectionpage" id="services">            
             <div class="row px-0 mx-0 d-flex contentpage justify-content-between">
-                <div class="row row-cols-1 col-2 mx-0 px-0 pt-2">
-                    <div>
-                        <img src="images/placeholder.jpg" alt="" class="img-fluid col-10 mx-auto">
-                        <div>Operational Technology</div>
+                <div class="row row-cols-1 col-2 mx-0 px-0 contentpage shadow align-items-center text-white font-weight-bold">
+                    <div class="bg-primary py-2">
+                        <img src="images/placeholder.jpg" alt="" class="img-fluid mx-auto">
+                        <div class="text-center">Operational Technology</div>
                     </div>
-                    <div>
-                        <img src="images/placeholder.jpg" alt="" class="img-fluid col-10 mx-auto">
-                        <div>Industrial Automation</div>
+                    <div class="bg-success py-2">
+                        <img src="images/placeholder.jpg" alt="" class="img-fluid mx-auto">
+                        <div class="text-center">Industrial Automation</div>
                     </div>
-                    <div>
-                        <img src="images/placeholder.jpg" alt="" class="img-fluid col-10 mx-auto">
-                        <div>Information Technology</div>
+                    <div class="bg-danger py-2">
+                        <img src="images/placeholder.jpg" alt="" class="img-fluid mx-auto">
+                        <div class="text-center">Information Technology</div>
                     </div>                    
                 </div>                
                 <div class="row contentpage col-8 px-0 mx-0 pt-2">
