Ashok's Design - Landing Page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div class="container-fluid container-lg h-100 w-100">
+    <div class="container-fluid h-100 w-100">
       <div class="content row row-cols-1 p-0 m-0" id="mainPage">
         <header class="col align-self-start p-0 m-0">
           <nav class="navbar navbar-expand-sm navbar-light bg light align-items-end-md px-0 mx-0">
