Ashok Landing Page - Feedback

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </head>
 
   <body>
-    <div class="container-fluid h-100 w-100">
+    <div class="container-fluid p-0 m-0 h-100 w-100">
       <div class="content row row-cols-1 p-0 m-0" id="mainPage">
         <header class="col align-self-start p-0 m-0">
-          <nav class="navbar navbar-expand-sm navbar-light bg light align-items-end-md px-0 mx-0">
+          <nav class="navbar navbar-expand-sm navbar-light bg light align-items-end-md mx-0">
             <button
               class="navbar-toggler"
               type="button"
@@ -60,9 +60,7 @@
           <section class="row px-0 mx-0 h-100 position-relative" id="landing">
             <img class="z-low position-absolute" src="images/landingPage1.jpg" height="100%" width="100%" alt="" />
             <div class="z-middle h-100 w-100 bg-dark opacity-higher position-absolute"></div>
-            <div
-              class="mx-auto z-top col col-lg-9 display-4 font-weight-normal align-self-center text-white position-absolute"
-            >
+            <div class="mx-auto z-top col col-lg-9 display-4 align-self-center text-white position-absolute font-big">
               <div class="d-sm-inline-block">
                 Together, we make
               </div>
@@ -72,7 +70,7 @@
               <div class="d-inline-block">
                 happen
               </div>
-              <div class="lead my-2">
+              <div class="my-2 text-white-50 font-lead">
                 Actualize is an amalgamation of three teams that came together to build a SMART future using the modern
                 technologies like IoT, AI, Edge Computing, Robotics and so much more.
               </div>
