Ashok Landing Page - Feedback 2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div class="container-fluid p-0 m-0 h-100 w-100">
+    <div class="container-fluid p-0 m-0 h-100 w-100 container-page">
       <div class="content row row-cols-1 p-0 m-0" id="mainPage">
         <header class="col align-self-start p-0 m-0">
           <nav class="navbar navbar-expand-sm navbar-light bg light align-items-end-md mx-0">
@@ -61,8 +61,14 @@
             <img class="z-low position-absolute" src="images/landingPage1.jpg" height="100%" width="100%" alt="" />
             <div class="z-middle h-100 w-100 bg-dark opacity-higher position-absolute"></div>
             <div class="mx-auto z-top col col-lg-9 display-4 align-self-center text-white position-absolute font-big">
-              <div class="d-sm-inline-block">
-                Together, we make
+              <div class="d-inline-block">
+                Together,
+              </div>
+              <div class="d-inline-block">
+                we
+              </div>
+              <div class="d-inline-block">
+                make
               </div>
               <div class="d-inline-block" id="textFills">
                 <span id="words">it</span>
