--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               </div>
               <div class="col bg-grey tab-content align-self-start pt-2" id="services-tabContent">
                 <div
-                  class="row px-0 mx-0 row-cols-1 tab-pane fade show active h-100"
+                  class="tab-pane fade show active h-100"
                   id="services-ia"
                   role="tabpanel"
                   aria-labelledby="services-ia-tab"
