--- a/index.html
+++ b/index.html
@@ -622,9 +622,9 @@
             </div>
           </section>
         </main>
-        <footer class="row col p-0 m-0 bg-grey align-self-end align-items-center justify-content-between">
-          <div class="col text-md-left">Copyright @Actualize 2020</div>
-          <div class="col text-md-right">Actualize is part of Texoham Center for Advanced Computing</div>
+        <footer class="row col row-cols-1 p-0 m-0 bg-grey align-self-end align-items-center justify-content-between">
+          <div class="col-auto text-md-left">Copyright @Actualize 2020</div>
+          <div class="col-auto text-md-right">Actualize is part of Texoham Center for Advanced Computing</div>
         </footer>
       </div>
     </div>
