--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                   <div class="row col py-2 px-0 mx-0 border-bottom border-secondary">
                     <div class="col-auto pl-2 pr-0">
                       <div class="col pr-0 font-lead">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem delectus iusto molestias neque
-                        earum maxime obcaecati, esse dolores libero adipisci qui voluptates dignissimos iure similique
-                        provident numquam pariatur hic praesentium?
+                        Industrial Automation team consists of two Field Engineers, Lingesh and Manikanta. They have
+                        combined experience of 6 years working on various control panels, different varieties of PLCs
+                        and CNCs.
                       </div>
                     </div>
                   </div>
@@ -169,9 +169,10 @@
                   <div class="row col py-2 px-0 mx-0 border-bottom border-secondary">
                     <div class="col-auto pl-2 pr-0">
                       <div class="col pr-0 font-lead">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem delectus iusto molestias neque
-                        earum maxime obcaecati, esse dolores libero adipisci qui voluptates dignissimos iure similique
-                        provident numquam pariatur hic praesentium?
+                        Operational Technology team consists of four electrical communication engineers, Vivek, Harsha,
+                        Mahendra, and Satish. They are proficient with Embedded systems and currently working on Edge
+                        Technologies. The team has been working with IEEE for the past 2 years for various projects to
+                        help standardize IoT.
                       </div>
                     </div>
                   </div>
@@ -182,9 +183,10 @@
                   <div class="row col py-2 px-0 mx-0 border-bottom border-secondary">
                     <div class="col-auto pl-2 pr-0">
                       <div class="col pr-0 font-lead">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem delectus iusto molestias neque
-                        earum maxime obcaecati, esse dolores libero adipisci qui voluptates dignissimos iure similique
-                        provident numquam pariatur hic praesentium?
+                        Information Technology team consists of three computer science engineers, Vignan, Ashok and
+                        Harika. The team works with the latest technologies such as Flutter for Mobile, Go and Rust
+                        Programming Languages to produce desired results. The team is proficient with NodeJS and
+                        MongoDB.
                       </div>
                     </div>
                   </div>
@@ -297,9 +299,9 @@
                   <div class="row col py-2 px-0 mx-0 border-bottom border-secondary">
                     <div class="col-auto pl-2 pr-0">
                       <div class="col pr-0 font-lead">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem delectus iusto molestias neque
-                        earum maxime obcaecati, esse dolores libero adipisci qui voluptates dignissimos iure similique
-                        provident numquam pariatur hic praesentium?
+                        <a href="http://www.texoham.com/">Texoham Centre for Advanced Computing</a>
+                        is an offshoot of Soham Academy of Human Excellence. Texoham is a place for young entrepreneurs
+                        to excel and generate wealth for themselves as well as for society.
                       </div>
                     </div>
                   </div>
@@ -310,9 +312,10 @@
                   <div class="row col py-2 px-0 mx-0 border-bottom border-secondary">
                     <div class="col-auto pl-2 pr-0">
                       <div class="col pr-0 font-lead">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem delectus iusto molestias neque
-                        earum maxime obcaecati, esse dolores libero adipisci qui voluptates dignissimos iure similique
-                        provident numquam pariatur hic praesentium?
+                        <a href="http://www.sohamacademy.org/">Soham Academy of Human Excellence</a>, established by
+                        Komaragiri Sahadev in 2016 to reform Indian Education System. This non-profit organization has
+                        been working with several schools to help students learn Yoga, Slokas, Robotics, and so many
+                        other things.
                       </div>
                     </div>
                   </div>
@@ -323,9 +326,9 @@
                   <div class="row col py-2 px-0 mx-0 border-bottom border-secondary">
                     <div class="col-auto pl-2 pr-0">
                       <div class="col pr-0 font-lead">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem delectus iusto molestias neque
-                        earum maxime obcaecati, esse dolores libero adipisci qui voluptates dignissimos iure similique
-                        provident numquam pariatur hic praesentium?
+                        <a href="https://www.ifocusmission.org/">iFocus Mission</a>
+                        focuses on bringing out the inherent positive qualities, promotes the culture of enriching one’s
+                        wisdom, aspires to help people effectively manage today’s world of complexities.
                       </div>
                     </div>
                   </div>
@@ -411,7 +414,7 @@
                 >
                   <div class="card-deck">
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/ia/controlPanel.jpg" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Control Panels</h5>
                         <p class="card-text font-lead">
@@ -422,7 +425,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/ia/plccnc.jpg" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">PLC and CNC Programming</h5>
                         <p class="card-text font-lead">
@@ -433,7 +436,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/ia/scada.jpg" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">HMI and SCADA</h5>
                         <p class="card-text font-lead">
@@ -448,7 +451,7 @@
                 <div class="tab-pane fade" id="services-ot" role="tabpanel" aria-labelledby="services-ot-tab">
                   <div class="card-deck">
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/ot/embedded.jpg" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Embedded Real-Time Systems</h5>
                         <p class="card-text font-lead">
@@ -459,7 +462,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/ot/iot.jpg" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Internet of Things(IoT)</h5>
                         <p class="card-text font-lead">
@@ -470,7 +473,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/ot/iiot.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Industrial Internet of Things(IIoT)</h5>
                         <p class="card-text font-lead">
@@ -485,7 +488,7 @@
                 <div class="tab-pane fade" id="services-it" role="tabpanel" aria-labelledby="services-it-tab">
                   <div class="card-deck">
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/it/pwa.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Progressive Web Applications</h5>
                         <p class="card-text font-lead">
@@ -496,7 +499,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/it/mobile.jpg" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Mobile Applications</h5>
                         <p class="card-text font-lead">
@@ -507,7 +510,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/it/desktop.jpg" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Desktop Applications</h5>
                         <p class="card-text font-lead">
@@ -522,7 +525,7 @@
                 <div class="tab-pane fade" id="services-tr" role="tabpanel" aria-labelledby="services-tr-tab">
                   <div class="card-deck">
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/tr/internship.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Internships</h5>
                         <p class="card-text font-lead">
@@ -533,7 +536,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/tr/webinar.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Webinars</h5>
                         <p class="card-text font-lead">
@@ -544,7 +547,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="images/placeholder.jpg" class="card-img-top" alt="..." />
+                      <img src="images/tr/workshop.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Workshops</h5>
                         <p class="card-text font-lead">
