--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                   <div class="row col py-2 px-0 mx-0 border-bottom border-secondary">
                     <div class="col-auto pl-2 pr-0">
                       <div class="col pr-0 font-lead">
-                        Operational Technology team consists of four electrical communication engineers, Vivek, Harsha,
+                        Operational Technology team consists of four electronic communication engineers, Vivek, Harsha,
                         Mahendra, and Satish. They are proficient with Embedded systems and currently working on Edge
                         Technologies. The team has been working with IEEE for the past 2 years for various projects to
                         help standardize IoT.
@@ -473,7 +473,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="images/ot/iiot.png" class="card-img-top" alt="..." />
+                      <img src="images/ot/iiot.jpg" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title font-medium">Industrial Internet of Things(IIoT)</h5>
                         <p class="card-text font-lead">
